// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LongTermDebtReport renders 1`] = `
<div
  className="report__longTermDebt"
>
  Your long term debt total
  <p
    className="report__currentDebt"
  >
    £
    800
  </p>
  <p
    className="report__creditLimit"
  >
    Total credit limit £
    0
     
  </p>
  <p
    className="report__debtChange report__debtChange--Up"
  >
    Up
     £
    0
     from last month
  </p>
</div>
`;

exports[`LongTermDebtReport when long term debt has decreased renders reporting the decrease 1`] = `
<div
  className="report__longTermDebt"
>
  Your long term debt total
  <p
    className="report__currentDebt"
  >
    £
    800
  </p>
  <p
    className="report__creditLimit"
  >
    Total credit limit £
    0
     
  </p>
  <p
    className="report__debtChange report__debtChange--Down"
  >
    Down
     £
    300
     from last month
  </p>
</div>
`;

exports[`LongTermDebtReport when long term debt has increased renders reporting the increase 1`] = `
<div
  className="report__longTermDebt"
>
  Your long term debt total
  <p
    className="report__currentDebt"
  >
    £
    800
  </p>
  <p
    className="report__creditLimit"
  >
    Total credit limit £
    0
     
  </p>
  <p
    className="report__debtChange report__debtChange--Up"
  >
    Up
     £
    800
     from last month
  </p>
</div>
`;
